# queue-service

./: Cargo.toml
src/: email.rs  email_grpc.rs  main.rs  mock.rs  other_services.rs  utils.rs
